--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -1,5 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="about_android">%1$s per Android</string>
+  <string name="about_version">Versione %1$s</string>
+  <string name="actionbar_search">Cerca questa cartella</string>
   <string name="actionbar_sync">Aggiorna account</string>
   <string name="actionbar_upload">Carica un file</string>
   <string name="actionbar_upload_from_apps">Contenuti da altre applicazioni</string>
@@ -14,11 +17,13 @@
   <string name="actionbar_sort_title">Ordina per</string>
   <string name="actionbar_sort_by_name">A-Z</string>
   <string name="actionbar_sort_by_date">Più vecchio - Più Recente</string>
+  <string name="actionbar_sort_by_size">Più piccolo - Più grande</string>
   <string name="drawer_item_all_files">Tutti i file</string>
   <string name="drawer_item_settings">Impostazioni</string>
   <string name="drawer_item_uploads_list">Caricamenti</string>
   <string name="drawer_close">Chiudi</string>
   <string name="drawer_open">Apri</string>
+  <string name="drawer_quota">%1$s di %2$s usato (%3$s %%)</string>
   <string name="drawer_unavailable_free_storage">%1$s in uso</string>
   <string name="drawer_unavailable_used_storage">Nessuna informazione sullo spazio disponibile</string>
   <string name="drawer_feedback">Segnalazioni</string>
@@ -41,6 +46,8 @@
   <string name="prefs_log_summary_history">Mostra i log registrati</string>
   <string name="prefs_log_delete_history_button">Elimina cronologia</string>
   <string name="prefs_help">Aiuto</string>
+  <string name="prefs_sync_calendar_contacts">Sincronizza i tuoi contatti, calendari e attività</string>
+  <string name="prefs_sync_calendar_contacts_summary">Installa DAVdroid</string>
   <string name="prefs_recommend">Consiglia a un amico</string>
   <string name="prefs_feedback">Segnalazioni</string>
   <string name="prefs_imprint">Imprint</string>
@@ -62,6 +69,8 @@
   <string name="illegal_argument_exception_message">Una AZIONE valida è necessaria per l\'intenzione di passare a</string>
   <string name="recommend_subject">Prova %1$s sul tuo smartphone!</string>
   <string name="recommend_text">Vorrei invitarti a usare %1$s sul tuo smartphone!\nScarica qui: %2$s</string>
+  <string name="auth_failure_snackbar">Autenticazione fallita</string>
+  <string name="auth_failure_snackbar_action">Cambia account</string>
   <string name="auth_check_server">Controlla il server</string>
   <string name="auth_host_url">Indirizzo server https://...</string>
   <string name="auth_username">Nome utente</string>
@@ -88,6 +97,7 @@
   <string name="file_list_no_app_for_file_type">Nessuna applicazione trovata per questo tipo di file</string>
   <string name="local_file_list_empty">Non ci sono file in questa cartella.</string>
   <string name="local_file_list_empty_just_folders">Non ci sono cartelle in questa cartella.</string>
+  <string name="local_file_list_search_with_no_matches">Nessun risultato per questa ricerca</string>
   <string name="upload_list_empty">Nessun caricamento disponibile.</string>
   <string name="file_list_folder">cartella</string>
   <string name="file_list_folders">cartelle</string>
@@ -122,7 +132,9 @@
   <string name="change_password">Modifica la password</string>
   <string name="delete_account">Rimuovi account</string>
   <string name="create_account">Crea account</string>
+  <string name="upload_chooser_title">Invia da</string>
   <string name="uploader_info_dirname">Nome della cartella</string>
+  <string name="uploader_upload_in_progress_ticker">Invio in corso...</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Caricamento di %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Caricamento effettuato</string>
   <string name="uploader_upload_succeeded_content_single">%1$s caricato</string>
@@ -139,6 +151,8 @@
   <string name="uploads_view_group_current_uploads">Attuale</string>
   <string name="uploads_view_group_failed_uploads">Non riuscito (tocca per riprovare)</string>
   <string name="uploads_view_group_finished_uploads">Caricati</string>
+  <string name="uploads_view_group_file_count">%d file</string>
+  <string name="uploads_view_group_file_count_single">%d file</string>
   <string name="uploads_view_upload_status_succeeded">Completati</string>
   <string name="uploads_view_upload_status_cancelled">Annullati</string>
   <string name="uploads_view_upload_status_paused">Sospesi</string>
@@ -156,6 +170,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">In attesa della connettività wifi</string>
   <string name="uploads_view_later_waiting_to_upload">In attesa di caricamento</string>
   <string name="uploads_view_unsupported_media_type">Formato non supportato</string>
+  <string name="downloader_download_in_progress_ticker">Scaricamento...</string>
   <string name="downloader_download_in_progress_content">%1$d%% Scaricamento di %2$s</string>
   <string name="downloader_download_succeeded_ticker">Scaricamento effettuato</string>
   <string name="downloader_download_succeeded_content">%1$s scaricato</string>
@@ -220,6 +235,7 @@
   <string name="media_forward_description">Pulsante Avanti veloce</string>
   <string name="upload_from_camera_title">Immagine dalla fotocamera</string>
   <string name="auth_getting_authorization">Autorizzazione in corso...</string>
+  <string name="auth_trying_to_login">Tentativo di accesso...</string>
   <string name="auth_no_net_conn_title">Nessuna connessione di rete</string>
   <string name="auth_nossl_plain_ok_title">Connessione sicura disponibile.</string>
   <string name="auth_connection_established">Connessione stabilita</string>
@@ -274,6 +290,7 @@
   <string name="wait_checking_credentials">Controllo delle credenziali memorizzate</string>
   <string name="filedisplay_unexpected_bad_get_content">Problema inatteso; prova un\'altra applicazione per selezionare il file</string>
   <string name="filedisplay_no_file_selected">Non è stato selezionato alcun file</string>
+  <string name="activity_chooser_title">Invia collegamento a</string>
   <string name="wait_for_tmp_copy_from_private_storage">Copia file dall\'archiviazione privata</string>
   <string name="oauth_check_onoff">Accesso con oAuth2.</string>
   <string name="oauth_login_connection">Connessione al server OAuth2...</string>
@@ -316,7 +333,10 @@
   <string name="confirmation_disable_camera_uploads_title">Conferma</string>
   <string name="confirmation_disable_pictures_upload_message">Sei sicuro di voler disabilitare questa funzionalità? Le immagini rimanenti non saranno caricate</string>
   <string name="confirmation_disable_videos_upload_message">Sei sicuro di voler disabilitare questa funzionalità? I video immagini rimanenti non saranno caricati</string>
+  <string name="proper_pics_folder_warning_camera_upload">Assicurati che la cartella selezionata sia quella che la tua fotocamera usa per salvare le foto scattate. Altrimenti, la funzione non sarà in grado di rilevare le tue foto. Tieni presente che le foto verranno inviate entro almeno 15 minuti dopo averle scattate.</string>
+  <string name="proper_videos_folder_warning_camera_upload">Assicurati che la cartella selezionata sia quella che la tua fotocamera usa per salvare i video registrati. Altrimenti, la funzione non sarà in grado di rilevare i tuoi video. Tieni presente che i video verranno inviati entro almeno 15 minuti dopo averli registrati.</string>
   <string name="conflict_title">File in conflitto</string>
+  <string name="conflict_description">C\'è un conflitto nel file %1$s, tocca per risolverlo</string>
   <string name="conflict_message">Quali file vuoi tenere? Se selezioni entrambi le versioni, il file locale avrà un numero aggiunto al suo nome.</string>
   <string name="conflict_keep_both">Mantieni entrambi</string>
   <string name="conflict_use_local_version">Versione locale</string>
@@ -366,6 +386,7 @@
   <string name="log_send_mail_subject">Registri applicazione %1$s Android</string>
   <string name="log_progress_dialog_text">Caricamento dati in corso...</string>
   <string name="actionbar_select_all">Seleziona tutto</string>
+  <string name="actionbar_select_inverse">Seleziona inverso</string>
   <string name="saml_authentication_required_text">Autenticazione richiesta</string>
   <string name="saml_authentication_wrong_pass">Password errata</string>
   <string name="actionbar_move">Sposta</string>
@@ -403,6 +424,8 @@
   <string name="prefs_camera_upload_source_path_title">Cartella della fotocamera (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">richiesto</string>
   <string name="prefs_camera_upload_source_path_title_optional">opzionale</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">Il file originale verrà</string>
+  <string name="prefs_camera_upload_behaviour_title">Il file originale verrà</string>
   <string name="upload_copy_files">Copia file</string>
   <string name="upload_move_files">Sposta file</string>
   <string name="pref_behaviour_entries_keep_file">lasciato nella cartella originale</string>
@@ -424,6 +447,7 @@
   <string name="share_via_link_password_title">Protetto</string>
   <string name="share_via_link_edit_permission_read_only_label">Scarica / visiona</string>
   <string name="share_via_link_edit_permission_read_and_write_label">Scarica / Visiona / Carica</string>
+  <string name="share_via_link_edit_permission_upload_only_label">Solo invio (File Drop)</string>
   <string name="share_get_public_link_button">Ottieni collegamento</string>
   <string name="share_with_title">Condividi con</string>
   <string name="share_with_edit_title">Condividi con %1$s</string>
@@ -509,7 +533,11 @@ Il Download del file inizierà automaticamente</string>
   <string name="welcome_feature_4_text">Le tue foto e video saranno automaticamente inviati al server</string>
   <string name="welcome_feature_5_title">Flusso video</string>
   <string name="welcome_feature_5_text">Guarda i tuoi filmati senza doverli scaricare</string>
+  <string name="welcome_feature_6_title">Cerca nella cartella attuale</string>
+  <string name="welcome_feature_6_text">Filtra i file per nome</string>
   <string name="welcome_feature_7_title">Seleziona tutto</string>
+  <string name="welcome_feature_7_text">Seleziona tutti i file</string>
   <string name="welcome_feature_8_title">Disponibile non in linea</string>
+  <string name="welcome_feature_8_text">I tuoi file sincronizzati automaticamente</string>
   <string name="no_borwser_installed_alert">Nessun browser installato. Si prega di installarne uno in modo da consentire un accesso sicuro.</string>
 </resources>
