[tx] updated from transifex

--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -132,7 +132,7 @@ Descárgueo de aquí: %2$s</string>
   <string name="common_important">Importante</string>
   <string name="about_title">Sobre</string>
   <string name="change_password">Cambiar o contrasinal</string>
-  <string name="delete_account">Borrar conta</string>
+  <string name="delete_account">Retirar a conta</string>
   <string name="create_account">Crear unha conta</string>
   <string name="upload_chooser_title">Enviar dende</string>
   <string name="uploader_info_dirname">Nome do cartafol</string>
