--- a/owncloudApp/src/main/res/values-gl/strings.xml
+++ b/owncloudApp/src/main/res/values-gl/strings.xml
@@ -37,6 +37,10 @@
   <string name="prefs_passcode">Código de bloqueo</string>
   <string name="prefs_fingerprint">Bloqueo por pegada</string>
   <string name="prefs_fingerprint_summary">Activar o código de seguridade ou patrón de bloqueo para activar esta opción</string>
+  <string name="prefs_touches_with_other_visible_windows">Toques con outras xanelas visíbeis</string>
+  <string name="prefs_touches_with_other_visible_windows_summary">Permitir toques cando a vista estea escurecida por outra xanela visíbel. Activar o emprego de aplis de filtrado de luz.</string>
+  <string name="confirmation_touches_with_other_windows_title">Confirma que quere activar esta característica?</string>
+  <string name="confirmation_touches_with_other_windows_message">Empregue esta característica baixo a súa responsabilidade, un aplicativo malicioso podería tentar enganalo para que realice algunhas accións, sen decatarse, empregando outras vistas.</string>
   <string name="prefs_camera_picture_upload">Envío de imaxe</string>
   <string name="prefs_camera_picture_upload_summary">Enviar instantaneamente as fotos tiradas coa cámara</string>
   <string name="prefs_camera_video_upload">Envío de vídeos</string>
