--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -37,6 +37,10 @@
   <string name="prefs_passcode">Kyçje me kodkalim</string>
   <string name="prefs_fingerprint">Kyçje me shenja gishtash</string>
   <string name="prefs_fingerprint_summary">Që të aktivizohet kjo mundësi, aktivizoni kyçje përmes kodkalimesh ose përmes rregullsish</string>
+  <string name="prefs_touches_with_other_visible_windows">Prekje me dritare të tjera të dukshme</string>
+  <string name="prefs_touches_with_other_visible_windows_summary">Lejo prekje kur pamja është zënë nga një tjetër dritare e dukshme. Aktivizojeni që të përdorni aplikacione filtrimi drite.</string>
+  <string name="confirmation_touches_with_other_windows_title">Jeni i sigurt se doni të aktivizohet kjo veçori?</string>
+  <string name="confirmation_touches_with_other_windows_message">Përgjegjësinë e kësaj veçorie e mbani ju vetë, një aplikacion dashakeq mund të përpiqej t’ua hidhte duke ju bërë të kryeni, pa e kuptuar, disa veprime, ndërkohë që përdorni pamje të tjera.</string>
   <string name="prefs_camera_picture_upload">Ngarkime fotosh</string>
   <string name="prefs_camera_picture_upload_summary">Fotot e bëra nga kamera ngarkoji vetvetiu</string>
   <string name="prefs_camera_video_upload">Ngarkime videosh</string>
