--- a/owncloudApp/src/main/res/values-ru/strings.xml
+++ b/owncloudApp/src/main/res/values-ru/strings.xml
@@ -37,6 +37,7 @@
   <string name="prefs_passcode">Блокировка кодом</string>
   <string name="prefs_fingerprint">Блокировка по отпечатку пальца</string>
   <string name="prefs_fingerprint_summary">Чтобы использовать эту настройку, включите блокировку по коду или графическому ключу</string>
+  <string name="confirmation_touches_with_other_windows_title">Вы уверены, что хотите включить эту функцию?</string>
   <string name="prefs_camera_picture_upload">Загрузки изображений</string>
   <string name="prefs_camera_picture_upload_summary">Автоматически загружать изображения, сделанные камерой</string>
   <string name="prefs_camera_video_upload">Загрузки видео</string>
