Solve Upload notification appears twice

--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -153,6 +153,9 @@
     <string name="uploader_upload_text_dialog_filename_error_empty">Filename must not be empty</string>
     <string name="uploader_upload_text_dialog_filename_error_length_max">Filename must not be more than %d characters</string>
     <string name="uploader_upload_text_filename_hint">Filename</string>
+    <string name="uploader_upload_camera_upload_files">Uploading camera upload files</string>
+    <string name="uploader_upload_available_offline_files">Uploading available offline files</string>
+    <string name="uploader_upload_requested_from_wifi_files">Uploading requested from wifi files</string>
     <string name="ssl_certificate_not_trusted">Server certificate is not trusted</string>
     <string name="uploads_view_title">Uploads</string>
     <string name="uploads_view_group_current_uploads">Current</string>
