--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="prefs_log_delete_history_button">Delete history</string>
     <string name="prefs_help">Help</string>
     <string name="prefs_sync_calendar_contacts">Sync your contacts, calendars and tasks</string>
-    <string name="prefs_sync_calendar_contacts_summary">Install DAVdroid</string>
+    <string name="prefs_sync_calendar_contacts_summary">Install DAVx⁵</string>
     <string name="prefs_recommend">Recommend to a friend</string>
     <string name="prefs_feedback">Feedback</string>
     <string name="prefs_imprint">Imprint</string>
