--- a/owncloudApp/src/main/res/values-sq/strings.xml
+++ b/owncloudApp/src/main/res/values-sq/strings.xml
@@ -52,6 +52,7 @@
   <string name="prefs_log_delete_history_button">Fshije historikun</string>
   <string name="prefs_help">Ndihmë</string>
   <string name="prefs_sync_calendar_contacts">Njëkohësoni kontaktet, kalendarët dhe punët tuaja</string>
+  <string name="prefs_sync_calendar_contacts_summary">Instalo DAVx⁵</string>
   <string name="prefs_recommend">Këshillojani një shoku</string>
   <string name="prefs_feedback">Përshtypje</string>
   <string name="prefs_imprint">Imprint</string>
